# Computer_Graphics_-CSE-333-IIID-

./: README.md
Assignments/: output.md
Assignments/Assignment01(Bezier Curves)/code/: Assignment01  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini
Assignments/Assignment01(Bezier Curves)/code/shaders/: fshader.fs  vshader.vs
Assignments/Assignment02(Camera and Viewing)/code/: Assignment02  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini
Assignments/Assignment03(Lighting)/pointlight/: Assignment03  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Assignments/Assignment03(Lighting)/spotlight/: Assignment03  CMakeCache.txt  Makefile  cmake_install.cmake
Assignments/Assignment04(Raytracing)/code/: Assignment04  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini
Assignments/Assignment04(Raytracing)/code/src/: color.cpp  color.h  main.cpp  material.cpp  material.h  object.h  ray.cpp  ray.h  renderengine.cpp  sphere.cpp  sphere.h  triangle.cpp  triangle.h  utility.cpp  utility.hpp  vector3D.cpp  vector3D.h  world.cpp  world.h
Labs/: README.md
Labs/lab01(OpenGL Modeling)/lab1/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini  lab1
Labs/lab02(Shape Representation)/lab2/: CMakeCache.txt  Lab2  Makefile  cmake_install.cmake
Labs/lab03(Binding Variables)/lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab3
Labs/lab06_Akash_2021009/lab6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab6  main.cpp
(+41 files in other folders)
